--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -1,12 +1,13 @@
 .projects {
-    padding: 50px 20px;
-    background-color: #f9f9f9;
-    text-align: center;
+   padding: 80px 20px;
+   background: linear-gradient(135deg, #ffffffff 0%, #ffffffff 100%);
+   min-height: 100vh;
+   text-align: center;
   }
   
   .projects-title {
-    font-size: 2.5rem;
-    color: #333;
+    font-size: clamp(32px, 4vw, 48px);
+    color: #1e293b;
     margin-bottom: 10px;
   }
   
