fix bug toggle menu

--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -20,6 +20,7 @@
 
 
 .about-container {
+  background: linear-gradient(135deg, #ffffffff 0%, #ffffffff 100%);
   max-width: 1200px;
   margin: 0 auto;
 }
