--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -1,5 +1,6 @@
 .projects {
    padding: 80px 20px;
+   background: linear-gradient(135deg, #ffffffff 0%, #ffffffff 100%);
    min-height: 100vh;
    text-align: center;
    transition: all 1s ease-out;
