--- a/src/components/css/Projects.css
+++ b/src/components/css/Projects.css
@@ -27,6 +27,12 @@
     margin-bottom: 10px;
   }
   
+  .projects-descripti {
+    font-size: 1.2rem;
+    color: #555;
+    margin-bottom: 40px;
+  }
+
   .projects-description {
     font-size: 1.2rem;
     color: #555;
